# fpl-api-rs

./: .gitignore  Cargo.toml  README.md
src/: bootstrap.rs  fixture.rs  lib.rs  manager.rs  players.rs
