[package]
name = "fpl_api"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["chvish <vishalchauhan9911@gmail.com>"]
description = "Rust bindings for the Fantasy PL API"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["test-util", "macros"] }
